--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <script src="css/bootstrap/js/jquery-3.5.1.slim.min.js"></script>
   <script src="css/bootstrap/js/popper.js@1.16.0.min.js"></script>
   <script src="css/bootstrap/js/bootstrap-4.5.0.min.js"></script>
-  <script src="./css/bootstrap/js/custom.js"></script>
+  <script src="./js/custom.js"></script>
 </body>
 
 </html>
